--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -1270,7 +1270,7 @@ jpn:
     # product_price_listings: "Listes de prix"
     # product_price_templates: "Types de prix"
     product_tabbox: #?
-    # production: "Gestion de la production"
+    # production: "Production"
     # productions: "Productions"
     productions_states:
       # aborted: "Annulées"
