--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -265,6 +265,11 @@ jpn:
     document_categories:
       items:
         # health: "Santé - Hygiène"
+        # land_parcel_management: "Conduite de la parcelle"
+    document_natures:
+      items:
+        # manure_management_plan: "Plan de fumure"
+        # veterinary_booklet: "Carnet vétérinaire"
     entity_natures:
       items:
         # association: "Association"
@@ -516,7 +521,8 @@ jpn:
     varieties-equipment:
       items:
         # tractor: "Tracteur"
-      # name: "Equipements"
+        # worker: "Travailleur"
+      # name: "Équipements"
     varieties-plant:
       items:
         # asteraceae: "Astéracées"
@@ -535,37 +541,5 @@ jpn:
       items:
         # caphorn: "Caphorn"
       # name: "Blé tendre"
-  procedures:
-    # animal_birth: "Naissance d’un animal"
-    # calving_one: "Vêlage unique"
-    # calving_twin: "Vêlage jumeaux"
-    # chemical_treatment: "Traitement chimique"
-    # mineral_fertilizing: "Fertilisation minérale"
-    # organic_fertilizing: "Fertilisation organique"
-    # plowing: "Labour"
-    # seed_harvest: "Moisson"
-    # sowing: "Semis"
-    # superficial_plowing: "Hersage"
-    # wheat_crop: "Culture de blé (standard)"
-  variables:
-    # cropper: "Moissonneuse batteuse"
-    # cropper_driver: "Conducteur de moissonneuse batteuse"
-    # culture: "Culture"
-    # driver: "Conducteur"
-    # fertilizer: "Engrais"
-    # fertilizer_to_spread: "Engrais à épandre"
-    # grains: "Grains"
-    # harrow: "Herse"
-    # land_parcel: "Parcelle"
-    # manure: "Fumier"
-    # manure_to_spread: "Fumier à épandre"
-    # molecule: "Molécule"
-    # plow: "Charrue"
-    # seeder: "Semoir"
-    # seeds: "Semences"
-    # seeds_to_sow: "Semence à semer"
-    # silo: "Silo"
-    # spreader: "Épandeur"
-    # straw: "Paille"
-    # tractor: "Tracteur"
-    # trailer: "Remorque"
+  procedures: #?
+  variables: #?
