--- a/config/locales/fra/prints/veterinary_booklet.xml
+++ b/config/locales/fra/prints/veterinary_booklet.xml
@@ -50,37 +50,37 @@
 		<fieldDescription><![CDATA[ancestor::intervention/@stopped-at]]></fieldDescription>
 	</field>
 	<field name="target_class_name" class="java.lang.String">
-		<fieldDescription><![CDATA[ancestor::intervention/@target-type]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/target/@type]]></fieldDescription>
 	</field>
 	<field name="target_identification" class="java.lang.String">
-		<fieldDescription><![CDATA[ancestor::intervention/@target-identification-number]]></fieldDescription>
+		<fieldDescription><![CDATA[../../target/@identification-number]]></fieldDescription>
 	</field>
 	<field name="target_name" class="java.lang.String">
-		<fieldDescription><![CDATA[ancestor::intervention/@target-name]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/target/@name]]></fieldDescription>
 	</field>
 	<field name="description" class="java.lang.String">
-		<fieldDescription><![CDATA[ancestor::intervention/@incident-description]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/incident/@description]]></fieldDescription>
 	</field>
 	<field name="name" class="java.lang.String">
-		<fieldDescription><![CDATA[ancestor::intervention/@incident-name]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/incident/@name]]></fieldDescription>
 	</field>
 	<field name="observed_at" class="java.util.Date">
-		<fieldDescription><![CDATA[ancestor::intervention/@incident-observed-at]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/incident/@observed-at]]></fieldDescription>
 	</field>
 	<field name="state" class="java.lang.String">
-		<fieldDescription><![CDATA[ancestor::intervention/@incident-state]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/incident/@state]]></fieldDescription>
 	</field>
 	<field name="worker_name" class="java.lang.String">
-		<fieldDescription><![CDATA[ancestor::intervention/@worker-name]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/worker/@name]]></fieldDescription>
 	</field>
 	<field name="id" class="java.lang.String">
-		<fieldDescription><![CDATA[ancestor::intervention/@prescription-id]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/prescription/@id]]></fieldDescription>
 	</field>
 	<field name="prescriptor" class="java.lang.String">
-		<fieldDescription><![CDATA[ancestor::intervention/@prescription-prescriptor-name]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/prescription/@prescriptor-name]]></fieldDescription>
 	</field>
 	<field name="reference_number" class="java.lang.String">
-		<fieldDescription><![CDATA[ancestor::intervention/@prescription-reference-number]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/prescription/@reference-number]]></fieldDescription>
 	</field>
 	<field name="meat_min_sale_date" class="java.util.Date">
 		<fieldDescription><![CDATA[sale-dates/meat-saleable-on]]></fieldDescription>
@@ -97,11 +97,8 @@
 	<field name="procedure_duration_day" class="java.lang.Double">
 		<fieldDescription><![CDATA[ancestor::intervention/@duration]]></fieldDescription>
 	</field>
-	<field name="quantity" class="java.lang.Double">
-		<fieldDescription><![CDATA[measure-quantity]]></fieldDescription>
-	</field>
-	<field name="quantity_unit" class="java.lang.String">
-		<fieldDescription><![CDATA[measure-unit]]></fieldDescription>
+	<field name="quantity" class="java.lang.String">
+		<fieldDescription><![CDATA[quantity]]></fieldDescription>
 	</field>
 	<field name="target_id" class="java.lang.String">
 		<fieldDescription><![CDATA[ancestor::intervention/@target-id]]></fieldDescription>
@@ -312,7 +309,7 @@
 				<textFieldExpression><![CDATA[$F{stopped_at}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="ee5f9f81-ece7-485a-aded-f878c5f986e2" style="base" x="117" y="20" width="75" height="20"/>
+				<reportElement uuid="ee5f9f81-ece7-485a-aded-f878c5f986e2" style="base" x="81" y="20" width="111" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{target_identification}]]></textFieldExpression>
 			</textField>
@@ -368,7 +365,6 @@
 				<reportElement uuid="698527ac-5221-44cd-9e7b-29ad6a94d793" style="base" x="448" y="21" width="99" height="18"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{quantity}]]></textFieldExpression>
-				<patternExpression><![CDATA["###0.00 "+$F{quantity_unit}]]></patternExpression>
 			</textField>
 			<rectangle>
 				<reportElement uuid="3bc54923-9c6a-4bbc-b071-67d7a9ecf1a1" mode="Transparent" x="0" y="0" width="81" height="39"/>
@@ -391,7 +387,7 @@
 				</reportElement>
 			</rectangle>
 			<textField isBlankWhenNull="true" hyperlinkType="Reference" hyperlinkTarget="Blank">
-				<reportElement uuid="e52b3426-4c76-46f7-85d6-7239447ab282" style="base" x="117" y="0" width="75" height="20"/>
+				<reportElement uuid="e52b3426-4c76-46f7-85d6-7239447ab282" style="base" x="81" y="0" width="111" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{target_name}]]></textFieldExpression>
 				<hyperlinkReferenceExpression><![CDATA["http://www.google.com"]]></hyperlinkReferenceExpression>
