--- a/config/locales/fra/prints/general_ledger.xml
+++ b/config/locales/fra/prints/general_ledger.xml
@@ -1,61 +1,315 @@
-<?xml version="1.0"?>
-<template title="Example" lang="fr" version="2.0">
-   <infos>
-    <info name="authors">Brice Texier</info>
-  </infos>
-  <parameters>
-    <parameter name="started_on" nature="date"/>
-    <parameter name="stopped_on" nature="date"/>
-  </parameters>
-  <document unit="mm" size="10">
-    <page orientation="portrait" format="A4" margin="10mm">
-      <part height="30mm">
-	<set>
-          <image value="{{Entity.of_company/picture.url(:original)}}" height="30mm">
-            <text value="{{Entity.of_company/full_name}}" size="16"/>
-          </image>
-	</set>
-      </part>
-      <part height="14mm">
-	<set>
-	  <text value="Grand livre" left="50%" align="center" width="150mm" bold="true" size="12"/>
-	  <text value="Du {{started_on?format=month_letter}} au {{stopped_on?format=month_letter}}" left="50%" align="center" width="150mm" top="7mm" size="12"/>
-	</set>
-      </part>
-      
-      <!-- Array of entries of the journal for the matching period -->
-      <iteration variable="account" collection="Account.all">
-
-	<part height="6mm">
-	  <set top="2mm">
-	    <text value="{{account/number}} : {{account/name}}" width="150mm" bold="true"/>
-	  </set>
-	</part>
-	<table collection="account.journal_entry_lines.between(started_on, stopped_on)" fixed="true" if="account.journal_entry_lines.between(started_on, stopped_on).count &gt; 0">
-	  <column label="Date" property="entry/printed_on" width="20mm"/>
-	  <column label="Numéro" property="entry/number" width="30mm" align="left"/>
-	  <column label="Libellé de l'écriture" property="name" width="100mm"/>
-	  <column label="Débit" property="debit" width="20mm" numeric="money"/>
-	  <column label="Crédit" property="credit" width="20mm" numeric="money"/>
-	</table>
-      
-	<!-- Sum -->
-	<part height="10mm" if="account.journal_entry_lines.between(started_on, stopped_on).count &gt; 0">
-          <set left="130mm">
-            <text value="Totaux" top="0.5mm" left="19mm" align="right" bold="true"/>
-            <text value="{{account.journal_entry_lines.between(started_on, stopped_on).sum(:debit)?numeric}}" top="0.5mm" left="39.5mm" align="right" bold="true"/>
-            <text value="{{account.journal_entry_lines.between(started_on, stopped_on).sum(:credit)?numeric}}" top="0.5mm" left="59.5mm" align="right" bold="true"/>
-            <text value="Solde" top="4.5mm" left="19mm" align="right" bold="true"/>
-            <text value="{{account.journal_entry_lines.between(started_on, stopped_on).sum(:balance)?numeric}}" top="4.5mm" left="40mm" align="center" bold="true"/>
-            <rectangle width="60mm" height="4mm" border="0.5 solid #000"/>
-            <rectangle width="60mm" height="4mm" border="0.5 solid #000" top="4mm"/>
-            <line path="20mm,0 ; 20mm,8mm" border="0.5 solid #000"/>
-            <line path="40mm,0 ; 40mm,4mm" border="0.5 solid #000"/>
-          </set>
-	</part>
-      </iteration>
-         
-    </page>
-    
-  </document>
-</template>
+<?xml version="1.0" encoding="UTF-8"?>
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="general_ledger" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" whenResourceMissingType="Empty" uuid="9c1f11b7-03dd-4803-9e1b-41b87b9d23c0">
+	<property name="ireport.zoom" value="1.0000000000000009"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="0"/>
+	<template><![CDATA["/home/djoulin/ekylibre/config/corporate-identity/reports-style.jrtx"]]></template>
+	<style name="Title" fontName="DejaVu Sans" fontSize="30" isBold="true" pdfFontName="Times-Bold"/>
+	<style name="SubTitle" forecolor="#736343" fontName="Arial" fontSize="18"/>
+	<style name="Column header" forecolor="#666666" fontName="DejaVu Sans" fontSize="12" isBold="true"/>
+	<style name="Detail" fontName="Arial" fontSize="12">
+		<conditionalStyle>
+			<conditionExpression><![CDATA[$F{dead-at} != null]]></conditionExpression>
+			<style mode="Transparent" forecolor="#FF3333" fill="Solid" vAlign="Top" isBold="false" isItalic="false" isUnderline="false"/>
+		</conditionalStyle>
+		<conditionalStyle>
+			<conditionExpression><![CDATA[$F{race-name}.contains("CROISE")]]></conditionExpression>
+			<style mode="Opaque" backcolor="#FFFF00" fill="Solid" vAlign="Top" isBlankWhenNull="false" isBold="false" isItalic="false" isUnderline="false"/>
+		</conditionalStyle>
+	</style>
+	<style name="Row" mode="Transparent"/>
+	<style name="Crosstab Data Text" hAlign="Center"/>
+	<parameter name="XML_DATA_DOCUMENT" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="XML_URL" class="java.lang.String" isForPrompting="false"/>
+	<queryString language="xPath">
+		<![CDATA[/financial-years/account/items/item]]>
+	</queryString>
+	<field name="id" class="java.lang.String">
+		<fieldDescription><![CDATA[id]]></fieldDescription>
+	</field>
+	<field name="name" class="java.lang.String">
+		<fieldDescription><![CDATA[name]]></fieldDescription>
+	</field>
+	<field name="entry_printed-on" class="java.util.Date">
+		<fieldDescription><![CDATA[printed-on]]></fieldDescription>
+	</field>
+	<field name="entry_number" class="java.lang.String">
+		<fieldDescription><![CDATA[number]]></fieldDescription>
+	</field>
+	<field name="journal_name" class="java.lang.String">
+		<fieldDescription><![CDATA[name]]></fieldDescription>
+	</field>
+	<field name="debit" class="java.lang.Double">
+		<fieldDescription><![CDATA[debit]]></fieldDescription>
+	</field>
+	<field name="credit" class="java.lang.Double">
+		<fieldDescription><![CDATA[credit]]></fieldDescription>
+	</field>
+	<field name="account_number" class="java.lang.String">
+		<fieldDescription><![CDATA[ancestor::account/@number]]></fieldDescription>
+	</field>
+	<field name="account_name" class="java.lang.String">
+		<fieldDescription><![CDATA[ancestor::account/@name]]></fieldDescription>
+	</field>
+	<field name="account_label" class="java.lang.String">
+		<fieldDescription><![CDATA[ancestor::account/@label]]></fieldDescription>
+	</field>
+	<field name="account_id" class="java.lang.String">
+		<fieldDescription><![CDATA[ancestor::account/@id]]></fieldDescription>
+	</field>
+	<field name="address" class="java.lang.String">
+		<fieldDescription><![CDATA[ancestor::financial-years/@address]]></fieldDescription>
+	</field>
+	<field name="entity-name" class="java.lang.String">
+		<fieldDescription><![CDATA[ancestor::financial-years/@entity-name]]></fieldDescription>
+	</field>
+	<sortField name="account_number"/>
+	<sortField name="entry_printed-on"/>
+	<variable name="id_1" class="java.lang.Integer" resetType="Group" resetGroup="account" calculation="Count">
+		<variableExpression><![CDATA[$F{id}]]></variableExpression>
+	</variable>
+	<variable name="credit_1" class="java.lang.Double" resetType="Group" resetGroup="account" calculation="Sum">
+		<variableExpression><![CDATA[$F{credit}]]></variableExpression>
+	</variable>
+	<variable name="debit_1" class="java.lang.Double" resetType="Group" resetGroup="account" calculation="Sum">
+		<variableExpression><![CDATA[$F{debit}]]></variableExpression>
+	</variable>
+	<group name="account" keepTogether="true">
+		<groupExpression><![CDATA[$F{account_id}]]></groupExpression>
+		<groupHeader>
+			<band height="41">
+				<line>
+					<reportElement uuid="5abae6f2-281f-493a-b567-f347b80e42b3" x="-21" y="27" width="576" height="1" forecolor="#7F4D15"/>
+				</line>
+				<textField isBlankWhenNull="true">
+					<reportElement uuid="9fc53b49-b18c-4c89-90d6-761e73aa5efe" style="strong" mode="Transparent" x="5" y="6" width="203" height="20"/>
+					<textElement/>
+					<textFieldExpression><![CDATA[$F{account_label}]]></textFieldExpression>
+				</textField>
+			</band>
+		</groupHeader>
+		<groupFooter>
+			<band height="42">
+				<staticText>
+					<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="10" y="10" width="121" height="20"/>
+					<textElement verticalAlignment="Middle">
+						<font fontName="DejaVu Sans"/>
+					</textElement>
+					<text><![CDATA[Total  :]]></text>
+				</staticText>
+				<textField evaluationTime="Group" evaluationGroup="account" pattern="###0.00" isBlankWhenNull="true">
+					<reportElement uuid="b6d0c75f-3f1b-4e56-b1cc-00ccbf357120" x="464" y="10" width="90" height="20"/>
+					<textElement/>
+					<textFieldExpression><![CDATA[$V{credit_1}]]></textFieldExpression>
+				</textField>
+				<textField evaluationTime="Group" evaluationGroup="account" pattern="###0.00" isBlankWhenNull="true">
+					<reportElement uuid="437422a6-84dc-4c9b-88fd-6ade5c9cabfc" x="372" y="10" width="92" height="20"/>
+					<textElement/>
+					<textFieldExpression><![CDATA[$V{debit_1}]]></textFieldExpression>
+				</textField>
+			</band>
+		</groupFooter>
+	</group>
+	<background>
+		<band splitType="Stretch"/>
+	</background>
+	<title>
+		<band height="38" splitType="Stretch">
+			<staticText>
+				<reportElement uuid="5b202e71-e4a3-4be8-8dcb-f735cc04164a" style="strong" mode="Opaque" x="2" y="29" width="571" height="2" backcolor="#7C9DDD"/>
+				<textElement verticalAlignment="Middle">
+					<font pdfFontName="Times-Roman"/>
+				</textElement>
+				<text><![CDATA[]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="dc35e306-d03e-4288-b40e-74e3bb33d471" style="title" x="0" y="0" width="554" height="29"/>
+				<textElement>
+					<font fontName="Open Sans" size="16" pdfFontName="Times-Roman"/>
+				</textElement>
+				<text><![CDATA[Grand Livre]]></text>
+			</staticText>
+		</band>
+	</title>
+	<pageHeader>
+		<band splitType="Stretch"/>
+	</pageHeader>
+	<columnHeader>
+		<band height="22" splitType="Stretch">
+			<staticText>
+				<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="198" y="0" width="93" height="22"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Open Sans"/>
+				</textElement>
+				<text><![CDATA[journal]]></text>
+			</staticText>
+			<line>
+				<reportElement uuid="1a8fa9c0-eac8-4ea0-a29e-72273e994335" positionType="FixRelativeToBottom" x="0" y="20" width="573" height="2"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineColor="#999999"/>
+				</graphicElement>
+			</line>
+			<staticText>
+				<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="1" y="0" width="130" height="22"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Open Sans"/>
+				</textElement>
+				<text><![CDATA[écriture]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="131" y="0" width="67" height="22"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Open Sans"/>
+				</textElement>
+				<text><![CDATA[date]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="291" y="0" width="81" height="22"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Open Sans"/>
+				</textElement>
+				<text><![CDATA[pièce]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="372" y="0" width="92" height="22"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Open Sans"/>
+				</textElement>
+				<text><![CDATA[débit]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="464" y="0" width="90" height="22"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Open Sans"/>
+				</textElement>
+				<text><![CDATA[crédit]]></text>
+			</staticText>
+		</band>
+	</columnHeader>
+	<detail>
+		<band height="21" splitType="Stretch">
+			<textField pattern="###0.00" isBlankWhenNull="true">
+				<reportElement uuid="dba1a483-6562-4082-a5d2-a0dd845fe182" style="base" mode="Opaque" x="464" y="0" width="90" height="21"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Open Sans" size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{credit}]]></textFieldExpression>
+			</textField>
+			<textField pattern="#,##0.00" isBlankWhenNull="true">
+				<reportElement uuid="42865504-0435-4a06-9df0-2151563c4fea" style="base" mode="Opaque" x="372" y="0" width="92" height="21"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Open Sans" size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{debit}]]></textFieldExpression>
+			</textField>
+			<textField pattern="" isBlankWhenNull="false">
+				<reportElement uuid="b8637e72-0dab-486c-980e-630dbe469547" style="base" mode="Opaque" x="198" y="0" width="93" height="21"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Open Sans" size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{journal_name}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement uuid="a38d906a-cdce-41e6-8ec3-ca0b9b9f65b6" style="base" mode="Opaque" x="291" y="0" width="81" height="21"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Open Sans" size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{entry_number}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement uuid="e39cad02-7296-4b15-be64-83e1005f9da2" style="base" mode="Opaque" x="1" y="0" width="130" height="21"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Open Sans" size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{name}.toLowerCase()]]></textFieldExpression>
+			</textField>
+			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
+				<reportElement uuid="14106f98-080d-4ea6-9add-6ce992833746" style="base" mode="Opaque" x="131" y="0" width="67" height="21"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Open Sans" size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{entry_printed-on}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement uuid="09a03d97-1c8c-4a8b-85a3-1868d25e2f8a" x="2" y="20" width="552" height="1"/>
+			</line>
+		</band>
+	</detail>
+	<columnFooter>
+		<band height="6" splitType="Stretch"/>
+	</columnFooter>
+	<pageFooter>
+		<band height="26" splitType="Stretch">
+			<textField evaluationTime="Report">
+				<reportElement uuid="50272410-1b25-4669-88c3-3be64f156f82" style="base" x="514" y="0" width="40" height="22" forecolor="#000000"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Open Sans"/>
+				</textElement>
+				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<textField pattern="dd/MM/yyyy HH.mm.ss">
+				<reportElement uuid="ebf60a3b-b81b-4ee3-b94d-a83ae04dd811" style="base" mode="Transparent" x="2" y="0" width="115" height="22" forecolor="#000000"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Open Sans"/>
+				</textElement>
+				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement uuid="342f7ef7-5da8-4d85-baf2-2c7968aecaed" style="base" x="461" y="0" width="54" height="22" forecolor="#000000"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font fontName="Open Sans"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}+" /"]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement uuid="3740387f-1656-45d4-b5a7-a671b9df52d6" style="strong" mode="Opaque" x="117" y="10" width="344" height="2" backcolor="#7C9DDD"/>
+				<textElement verticalAlignment="Middle">
+					<font pdfFontName="Times-Roman"/>
+				</textElement>
+				<text><![CDATA[]]></text>
+			</staticText>
+			<textField>
+				<reportElement uuid="bed30d3f-2abb-4bc2-a2c2-d4afdaa87984" style="address" x="174" y="1" width="224" height="25"/>
+				<textElement textAlignment="Center" verticalAlignment="Top"/>
+				<textFieldExpression><![CDATA[$F{address}]]></textFieldExpression>
+			</textField>
+		</band>
+	</pageFooter>
+	<lastPageFooter>
+		<band height="26">
+			<staticText>
+				<reportElement uuid="6a745fd5-25a2-4de3-87b6-1d920ef1a4c0" style="strong" mode="Opaque" x="117" y="10" width="344" height="2" backcolor="#7C9DDD"/>
+				<textElement verticalAlignment="Middle">
+					<font pdfFontName="Times-Roman"/>
+				</textElement>
+				<text><![CDATA[]]></text>
+			</staticText>
+			<textField evaluationTime="Report">
+				<reportElement uuid="c5669d5d-31af-4dd7-bf88-534422b21b01" style="base" x="514" y="0" width="40" height="22" forecolor="#000000"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Open Sans"/>
+				</textElement>
+				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<textField pattern="dd/MM/yyyy HH.mm.ss">
+				<reportElement uuid="a98f0540-b3f2-4380-aab0-f9d96ea72b6e" style="base" mode="Transparent" x="2" y="0" width="115" height="22" forecolor="#000000"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Open Sans"/>
+				</textElement>
+				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement uuid="5de70a0c-bd99-4937-84fa-c172a5df272f" style="base" x="461" y="0" width="54" height="22" forecolor="#000000"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font fontName="Open Sans"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}+" /"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement uuid="54969179-47f0-402d-a856-b4ac17a0ad05" style="address" x="174" y="1" width="224" height="25"/>
+				<textElement textAlignment="Center" verticalAlignment="Top"/>
+				<textFieldExpression><![CDATA[$F{address}]]></textFieldExpression>
+			</textField>
+		</band>
+	</lastPageFooter>
+</jasperReport>
