--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -1860,45 +1860,24 @@ fra:
     use_entity_codes_for_account_numbers: "Utiliser le code personne pour composer les numéros de compte"
     various_journal: "Journal des opérations diverses par défaut"
   unroll:
-    backend/accounts:
-      all: "{number}. {name}"
-    backend/activities:
-      all: "{name} ({family}/{nature})"
-    backend/analytic_repartitions:
-      all: "{id}"
-    backend/animals:
-      all: "{name} - {work_number}"
-    backend/campaigns:
-      all: "{name}"
-    backend/entity_links:
-      all: "{started_at}"
-    backend/events:
-      all: "{reason}"
-    backend/journal_entry_items:
-      all: "{name}"
-    backend/logs:
-      all: "{observed_at}"
-    backend/matters:
-      all: "{name} - {work_number}"
-    backend/observations:
-      all: "{content}"
-    backend/operations:
-      all: "{nature} ({created_at})"
-    backend/plants:
-      all: "{name} - {work_number}"
-    backend/product_indicators:
-      all: "{id}"
-    backend/product_memberships:
-      all: "{started_at}"
-    backend/product_nature_prices:
-      all: "{amount} {currency} / {pretax_amount} {currency}"
-    backend/product_natures:
-      all: "{name}"
-    backend/product_transfers:
-      all: "{id}"
-    backend/products:
-      all: "{work_number} {name}"
-    backend/units:
-      all: "{label} ({name})"
-    backend/users:
-      all: "{first_name} {last_name}"
+    backend/accounts: "{number}. {name}"
+    backend/activities: "{name} ({family}/{nature})"
+    backend/analytic_repartitions: "{id}"
+    backend/animals: "{name} - {work_number}"
+    backend/campaigns: "{name}"
+    backend/entity_links: "{started_at}"
+    backend/events: "{reason}"
+    backend/journal_entry_items: "{name}"
+    backend/logs: "{observed_at}"
+    backend/matters: "{name} - {work_number}"
+    backend/observations: "{content}"
+    backend/operations: "{nature} ({created_at})"
+    backend/plants: "{name} - {work_number}"
+    backend/product_indicators: "{id}"
+    backend/product_memberships: "{started_at}"
+    backend/product_nature_prices: "{amount} {currency} / {pretax_amount} {currency}"
+    backend/product_natures: "{name}"
+    backend/product_transfers: "{id}"
+    backend/products: "{work_number} {name}"
+    backend/units: "{label} ({name})"
+    backend/users: "{first_name} {last_name}"
