finalize VAT and Bank charts in accounting dashboard.

--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -897,7 +897,7 @@ fra:
         opera: "Opéra"
         safari: "Safari"
     balance: "Solde"
-    bank_chart: "Évolution du solde de banque"
+    bank_chart: "Évolution du solde des comptes de trésorerie"
     bban: "Relevé d'identité bancaire (RIB)"
     beginning: "Début"
     begins: "Commence par"
@@ -942,6 +942,7 @@ fra:
     close_financial_year: "Clôturer l’exercice"
     close_journal: "Clôturer le journal"
     closed: "Verrouillées"
+    collected_taxes: "TVA déductibles / collectées"
     column: "Donnée"
     column_family: "Famille"
     column_organization: "Organisation"
