--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -1145,6 +1145,7 @@ fra:
     last_clients: "Derniers clients"
     last_computed_balance: "Dernière balance calculée"
     last_events: "Derniers évènements"
+    last_entities: "Derniers tiers"
     last_milk_result: "Dernières analyses de lait"
     last_payment_amount: "Montant du dernier encaissement"
     last_payment_date: "Date du dernier encaissement"
