--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -97,7 +97,7 @@ fra:
         capitals: "Comptes de capitaux"
         cash: "Caisse"
         clients: "Clients"
-        collected_taxes: "Taxes sur le chiffre d'affaires collectées par l'entreprise"
+        collected_vat: "Taxes sur le chiffre d'affaires collectées par l'entreprise"
         compensation_operations: "Operations de compensation (conventions de compte courant)"
         cooperative_participation_assets: "Sociétés coopératives agricoles (sauf CUMA)"
         corporeal_asset_depreciations: "Ammortissements des immobilisations corporelles"
@@ -197,7 +197,7 @@ fra:
         own_building_expenses: "Constructions (sur sol propre)"
         ownership_assets: "Titres immobilisés (droits de propriété)"
         ownership_loan: "Prêts consentis"
-        paid_taxes: "Taxes sur le chiffre d'affaires deductibles"
+        deductible_vat: "Taxes sur le chiffre d'affaires deductibles"
         pending_deposit_payments: "Valeurs à l'encaissement "
         plant_derivative_stock: "Stock de produits finis végétaux"
         plant_derivatives_revenues: "Vente de produits végétaux"
@@ -208,6 +208,7 @@ fra:
         products_specials_taxes: "Taxes spécifiques sur les produits de l'exploitation"
         professional_agricultural_organization_assets: "Participations à des organismes professionnels agricoles"
         professionnals_subscriptions_expenses: "Cotisations professionnelles"
+        rectify_collected_vat: "TVA collectée à régulariser"
         raw_material_expenses: "Matières premières"
         reductions: "Escomptes obtenus"
         reevaluation_gaps: "Ecart de réévaluation"
@@ -234,7 +235,7 @@ fra:
         staff_due_remunerations: "Personnel - rémunérations dûes"
         staff_expenses: "Charges de personnel"
         staff_salary: "Salaires"
-        state_taxes: "Etat - Taxes sur le chiffre d'affaire"
+        vat: "Etat - Taxes sur le chiffre d'affaire"
         stocks: "Comptes de stocks et en-cours"
         stocks_variation: "Variation de stocks"
         studies_and_research_expenses: "Etudes et recherches"
@@ -256,7 +257,7 @@ fra:
         usual_bank_overdraft: "Concours bancaires courants"
         vegetals_productions_expenses: "Achats pour productions végétales"
         veterinary_fees_expenses: "Honoraires veterinaires"
-        waiting_taxes: "Taxes sur le chiffres d'affaires à régulariser ou en attente"
+        waiting_vat: "Taxes sur le chiffres d'affaires à régulariser ou en attente"
         water_expenses: "Eau"
         young_animal_assets: "Animaux reproducteurs (jeunes de renouvellement)"
         young_animal_expenses: "Animaux reproducteurs (jeunes de renouvellement)"
@@ -464,6 +465,28 @@ fra:
         vegetal_global_documentation: "Documentation globale végétale"
         vinification: "Vinification"
       name: "Type de procédures"
+    taxes:
+      attributes:
+        active: "actif"
+        started_on: "débuté le"
+        stopped_on: "arrêté le"
+        nature: "nature"
+        amount: "valeur"
+        country: "pays"
+        deduction_account: "compte de TVA déductible (radical)"
+        collect_account: "compte de TVA collectée (radical)"
+        suffix: "suffixe du compte comptable"
+      choices:
+        nature:
+          percentage: "pourcentage"
+          amount: "montant"
+      items:
+        fr_vat_null: "TVA 0.00%"
+        fr_vat_particular: "TVA 2.1%"
+        fr_vat_reduce: "TVA 5.00%"
+        fr_vat_intermediate: "TVA 10.00%"
+        fr_vat_normal: "TVA 20.00%"
+      name: "Type de taxes"
     units:
       items:
         are: "are"
