--- a/config/locales/fra/currencies.yml
+++ b/config/locales/fra/currencies.yml
@@ -161,6 +161,10 @@ fra:
     VND: "Dong (monnaie)"
     VUV: "Vatu"
     WST: "Tala"
+    # XAF: "CFA Franc BEAC"
+    # XCD: "East Carribean Dollar"
+    # XOF: "CFA Franc BCEAO"
+    # XPF: "CFP Franc"
     YER: "Rial yéménite"
     ZAR: "Rand"
     ZMK: "Kwacha zambien"
