finalize dashboard in Stocks

--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -1146,7 +1146,9 @@ fra:
     last_computed_balance: "Dernière balance calculée"
     last_entities: "Derniers tiers"
     last_events: "Derniers évènements"
+    last_incoming_deliveries: "Derniers approvisionnements"
     last_milk_result: "Dernières analyses de lait"
+    last_outgoing_deliveries: "Dernières livraisons"
     last_payment_amount: "Montant du dernier encaissement"
     last_payment_date: "Date du dernier encaissement"
     last_procedures: "Dernières procédures"
@@ -1219,6 +1221,7 @@ fra:
     mobile: "Portable"
     mode: "Mode"
     modes: "Modes"
+    currents_stocks_by_product_nature: "Etat des stocks"
     modules: "Modules"
     month_period: "%{code} - %{month} %{year}"
     monthly: "Mensuelle"
@@ -1333,6 +1336,7 @@ fra:
     passive_stock_sum: "Total provisions"
     passive_sum: "Total passifs"
     password: "Mot de passe"
+    stock_of_x: "Stock de %{x}"
     payback: "Remboursement demandée"
     payment_amount: "Montant de l’encaissement"
     payment_label: "%{number}. %{amount} (%{usable_amount} restants) du %{date} par %{mode} de %{entity}"
