--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -1277,6 +1277,7 @@ fra:
     next: "Suivant"
     no_commercial: "— Sans commercial —"
     no_contacts: "Aucune adresse définie pour %{name}"
+    no_data: "Aucune donnée"
     no_deliveries: "Aucune livraison en attente"
     no_deliveries_for_this_sale: "Cette vente n’est associée à aucune livraison"
     no_deposits: "Aucune remise en banque à valider"
