Adds Gap and removes Catalog#supplier notion

--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -2666,6 +2666,10 @@ arb:
     purchase_nature:
       default:
         # name: "Standard"
+    role:
+      default:
+        # administrator: "Gérant"
+        # public: "Public"
     sale:
       # bookkeep: "[%{resource} %{number}] %{products} pour %{client} (%{sale})"
       label:
