--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -240,6 +240,7 @@ eng:
       index: "Financial years"
       new: "Open a new financial year"
       show: "Financial year %{code}"
+    backend/gaps: #?
     backend/help:  #?
       index: "Help" #?
       show: "Help: %{title}" #?
