--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -1510,6 +1510,10 @@ jpn:
     purchase_nature:
       default:
         # name: "Standard"
+    role:
+      default:
+        # administrator: "Gérant"
+        # public: "Public"
     sale:
       # bookkeep: "[%{resource} %{number}] %{products} pour %{client} (%{sale})"
       label:
