--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -250,6 +250,7 @@ spa:
       index: "Exercicios contables"
       new: "Crear un nuevo ejercicio"
       show: "Exercicio contable %{code}"
+    backend/gaps: #?
     backend/help: #?
     backend/helps:
       # index: "Aide"
