--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -2615,11 +2615,8 @@ arb:
         waste: "الضائع" #?
     production:
       # bookkeep: "[%{resource} %{number}] %{products} pour %{client} (%{sale})"
-      label:
-        # aborted: "Production annulée %{identification}"
-        # draft: "Production prévue %{identification}"
-        # started: "Production en cours %{identification}"
-        # validated: "Production validée %{identification}"
+      label: #?
+      # name: "%{product_nature}/%{activity} %{campaign} (%{state})"
       states:
         # aborted: "Annulée"
         # draft: "Prévue"
