--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -1472,11 +1472,7 @@ fra:
         sales: "Vente"
     production:
       bookkeep: "[%{resource} %{number}] %{products} pour %{client} (%{sale})"
-      label:
-        aborted: "Production annulée %{identification}"
-        draft: "Production prévue %{identification}"
-        started: "Production en cours %{identification}"
-        validated: "Production validée %{identification}"
+      name: "%{product_nature}/%{activity} %{campaign} (%{state})"
       states:
         aborted: "Annulée"
         draft: "Prévue"
