--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -1482,11 +1482,8 @@ jpn:
     product_price_template: #?
     production:
       # bookkeep: "[%{resource} %{number}] %{products} pour %{client} (%{sale})"
-      label:
-        # aborted: "Production annulée %{identification}"
-        # draft: "Production prévue %{identification}"
-        # started: "Production en cours %{identification}"
-        # validated: "Production validée %{identification}"
+      label: #?
+      # name: "%{product_nature}/%{activity} %{campaign} (%{state})"
       states:
         # aborted: "Annulée"
         # draft: "Prévue"
